--- a/index.html
+++ b/index.html
@@ -1,1 +1,47 @@
+   
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Image Gallery</title>
+    <style>
+  .gallery {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    justify-content: center;
+  }
+  figure {
+    text-align: center;
+  }
+  img {
+    border-radius: 8px;
+    border: 2px solid #ddd;
+  }
+</style>
+         
+<div class="gallery">
+  <!-- the four figure blocks here -->
+</div>
+</head>
+<body>
+    <figure>
+  <img src="https://picsum.photos/200?random=1" alt="Image 1" />
+  <figcaption>Caption for Image 1</figcaption>
+</figure>
+<figure>
+  <img src="https://picsum.photos/200?random=2" alt="Image 2" />
+  <figcaption>Caption for Image 2</figcaption>
+</figure>
+<figure>
+  <img src="https://picsum.photos/200?random=3" alt="Image 3" />
+  <figcaption>Caption for Image 3</figcaption>
+</figure>
+<figure>
+  <img src="https://picsum.photos/200?random=4" alt="Image 4" />
+  <figcaption>Caption for Image 4</figcaption>
+</figure>
 
+</body>
+</html>
